(env
  (_ (flags (:standard -open Base.Either -open Tjr_monad -open Tjr_fs_shared -open Tjr_path_resolution -open Tjr_net ))))


(library
  (public_name "tjr_minifs")
  (preprocessor_deps (file "config.ml"))
  (preprocess (pps ppx_deriving_yojson ppx_bin_prot ppx_optcomp))
  (libraries ppx_bin_prot ppx_deriving_yojson extunix lwt lwt.unix ocamlfuse base tjr_monad tjr_fs_shared tjr_net tjr_path_resolution)
)

(include_subdirs unqualified)


